--- a/janani.html
+++ b/janani.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <a-scene>
-      <a-sky color="#6EBAA7"></a-sky>
+      <a-sky color="#00FFFF"></a-sky>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#00FF00"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-ring color="teal" radius-inner="1" radius-outer="2"></a-ring>
