--- a/janani.html
+++ b/janani.html
@@ -11,6 +11,7 @@
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane color="#CCC" height="20" width="20"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
+      <a-ring color="teal" radius-inner="1" radius-outer="2"></a-ring>
     </a-scene>
   </body>
 </html>
