--- a/janani.html
+++ b/janani.html
@@ -12,6 +12,7 @@
       <a-plane color="#CCC" height="20" width="20"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
       <a-ring color="teal" radius-inner="1" radius-outer="2"></a-ring>
+      <a-entity text="value: Hello World;"></a-entity>
       </a-scene>
   </body>
 </html>
